feat: add slider and section services

--- a/singolo1.html
+++ b/singolo1.html
@@ -33,6 +33,74 @@
       </div>
     </header>
     <section class="slider">
+      <div class="slider__panel"></div>
+      <div class="slider__content">
+
+      </div>
+      <div class="slider__panel"></div>
+    </section>
+    <section class="services">
+      <div class="services__wrapper">
+        <div class="services__banner">
+          <div class="services__banner__head">
+            <h3>Our Services</h3>
+          </div>
+          <div class="services__banner__info">
+            <h5>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus,
+              nisi erat porttitor<span> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+                tortor mauris condimentum nibh.</span></h5>
+          </div>
+        </div>
+        <div class="benefits">
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/pen.svg" alt="Custom Design">
+            <div class="benefits__content__text">
+              <h4>Custom Design</h4>
+              <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                ultrices velit.</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/lightbulb.svg" alt="Inovative Ideas">
+            <div class="benefits__content__text">
+              <h4>Inovative Ideas</h4>
+              <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+              </p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/heart.svg" alt="Love Is The Answer">
+            <div class="benefits__content__text">
+              <h4>Love Is The Answer</h4>
+              <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                condimentum.</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/phone.svg" alt="Responsive Layout">
+            <div class="benefits__content__text">
+              <h4>Responsive Layout</h4>
+              <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/bubble.svg" alt="24 / 7 Support">
+            <div class="benefits__content__text">
+              <h4>24 / 7 Support</h4>
+              <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas
+                venenatis lorem .</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/star.svg" alt="Feel Like A Star">
+            <div class="benefits__content__text">
+              <h4>Feel Like A Star</h4>
+              <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+            </div>
+          </div>
+
+        </div>
+      </div>
 
     </section>
     <footer></footer>
