fix: correct files and markup with styles

--- a/singolo1.html
+++ b/singolo1.html
@@ -33,11 +33,18 @@
       </div>
     </header>
     <section class="slider">
-      <div class="slider__panel"></div>
+      <div class="slider__panel"><img class="slider__panel__button" src="assets/slideleft.svg" alt="Left"></div>
       <div class="slider__content">
-
+        <div class="phone__vertical">
+          <div class="phone__vertical__content"></div>
+          <div class="phone__vertical__shadow"></div>
+        </div>
+        <div class="phone__horizontal">
+          <div class="phone__horizontal__content"></div>
+          <div class="phone__horizontal__shadow"></div>
+        </div>
       </div>
-      <div class="slider__panel"></div>
+      <div class="slider__panel"><img class="slider__panel__button" src="assets/slideright.svg" alt="Right"></div>
     </section>
     <section class="services">
       <div class="services__wrapper">
