fix: styles for pixel perfect

--- a/singolo2.html
+++ b/singolo2.html
@@ -22,6 +22,12 @@
             <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
             </p>
           </div>
+          <div class="portfolio__panel">
+            <a class="portfolio__panel__link" href="#all" target="_blank">All</a>
+            <a class="portfolio__panel__link" href="#WebDesign" target="_blank">Web Design</a>
+            <a class="portfolio__panel__link" href="#GraphicDesign" target="_blank">Graphic Design</a>
+            <a class="portfolio__panel__link" href="#Artwork" target="_blank">Artwork</a>
+          </div>
         </div>
         <div class="portfolio__content">
           <div class="portfolio__content__images">
@@ -95,7 +101,7 @@
           <div class="command__content">
             <img class="command__content__image" src="assets/scolara.png" alt="Scolara Visari">
             <div class="command__content__text">
-              <h4>Scolara Visari</h4>
+              <h4 class="special">Scolara Visari</h4>
               <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
                 condimentum.</p>
             </div>
