feat: add final singolo

--- a/index.html
+++ b/index.html
@@ -1,12 +1,283 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <link rel="stylesheet" type="text/css" media="screen" href="style.css" />
   <title>Singolo</title>
 </head>
+
 <body>
-  
+
+  <main>
+    <header class="header">
+      <div class="header__content">
+        <div class="logo">
+          <h1 class="logo__text">SINGOLO</h1>
+          <p>*</p>
+        </div>
+        <nav class="navigation">
+          <ul class="menu">
+            <li class="menu__element"><a href="#home">HOME</a></li>
+            <li class="circle"></li>
+            <li class="menu__element"><a href="#services">SERVICES</a></li>
+            <li class="circle"></li>
+            <li class="menu__element"><a href="#">PORTFOLIO</a></li>
+            <li class="circle"></li>
+            <li class="menu__element"><a href="#about">ABOUT</a></li>
+            <li class="circle"></li>
+            <li class="menu__element"><a href="#contact">CONTACT</a></li>
+          </ul>
+        </nav>
+      </div>
+    </header>
+    <section class="slider">
+      <div class="slider__panel"><img class="slider__panel__button" src="assets/slideleft.svg" alt="Left"></div>
+      <div class="slider__content">
+        <div class="phone__vertical">
+          <div class="phone__vertical__content"></div>
+          <div class="phone__vertical__shadow"></div>
+        </div>
+        <div class="phone__horizontal">
+          <div class="phone__horizontal__content"></div>
+          <div class="phone__horizontal__shadow"></div>
+        </div>
+      </div>
+      <div class="slider__panel"><img class="slider__panel__button" src="assets/slideright.svg" alt="Right"></div>
+    </section>
+    <section class="services">
+      <div class="services__wrapper">
+        <div class="services__banner">
+          <div class="services__banner__head">
+            <h3>Our Services</h3>
+          </div>
+          <div class="services__banner__info">
+            <h5>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus,
+              nisi erat porttitor<span> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+                tortor mauris condimentum nibh.</span></h5>
+          </div>
+        </div>
+        <div class="benefits">
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/pen.svg" alt="Custom Design">
+            <div class="benefits__content__text">
+              <h4>Custom Design</h4>
+              <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                ultrices velit.</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/lightbulb.svg" alt="Inovative Ideas">
+            <div class="benefits__content__text">
+              <h4>Inovative Ideas</h4>
+              <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+              </p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/heart.svg" alt="Love Is The Answer">
+            <div class="benefits__content__text">
+              <h4>Love Is The Answer</h4>
+              <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                condimentum.</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/phone.svg" alt="Responsive Layout">
+            <div class="benefits__content__text">
+              <h4>Responsive Layout</h4>
+              <p>Sed porttitor placerat rhoncus. In at nunc tellus. Maecenas blandit nunc ligula. Praesent elit leo.</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/bubble.svg" alt="24 / 7 Support">
+            <div class="benefits__content__text">
+              <h4>24 / 7 Support</h4>
+              <p>Vivamus vel quam lacinia, tincidunt dui non, vehicula nisi. Nulla a sem erat. Pellentesque egestas
+                venenatis lorem .</p>
+            </div>
+          </div>
+          <div class="benefits__content">
+            <img class="benefits__content__image" src="assets/star.svg" alt="Feel Like A Star">
+            <div class="benefits__content__text">
+              <h4>Feel Like A Star</h4>
+              <p>Quisque hendrerit purus dapibus, ornare nibh vitae, viverra nibh. Fusce vitae aliquam tellus.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="portfolio">
+      <div class="portfolio__wrapper">
+        <div class="portfolio__banner">
+          <div class="portfolio__banner__head">
+            <p>Portfolio</p>
+          </div>
+          <div class="portfolio__banner__info">
+            <p>Duis mollis, est non commodo luctus, nisi erat porttitor ligula, eget lacinia odio sem nec elit.
+            </p>
+          </div>
+          <div class="portfolio__panel">
+            <a class="portfolio__panel__link" href="#all" target="_blank">All</a>
+            <a class="portfolio__panel__link" href="#WebDesign" target="_blank">Web Design</a>
+            <a class="portfolio__panel__link" href="#GraphicDesign" target="_blank">Graphic Design</a>
+            <a class="portfolio__panel__link" href="#Artwork" target="_blank">Artwork</a>
+          </div>
+        </div>
+        <div class="portfolio__content">
+          <div class="portfolio__content__images">
+            <img class="portfolio__content__image" src="assets/portfolio1.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio2.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio3.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio4.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio5.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio6.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio7.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio8.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio9.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio10.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio11.jpg" alt="Portfolio">
+            <img class="portfolio__content__image" src="assets/portfolio12.jpg" alt="Portfolio">
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="about">
+      <div class="about__wrapper">
+        <div class="about__banner">
+          <div class="about__banner__head">
+            <h3>About Us</h3>
+          </div>
+          <div class="about__banner__info">
+            <h5>Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis, non commodo luctus,
+              nisi erat porttitor<span> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus ac cursus commodo,
+                tortor mauris condimentum nibh.</span></h5>
+          </div>
+        </div>
+        <div class="command">
+          <div class="command__content">
+            <img class="command__content__image" src="assets/adam.png" alt="Adam Jensen">
+            <div class="command__content__text">
+              <h4>Adam Jensen</h4>
+              <p>Quisque luctus, quam eget molestie commodo, lacus purus cursus purus, nec rutrum tellus dolor id lorem.
+              </p>
+            </div>
+            <div class="command__content__social">
+              <a class="command__content__social__link" href="https://www.facebook.com" target="_blank">
+                <img src="./assets/facebook.png" alt="Facebook.com"></a>
+              <a class="command__content__social__link" href="https://www.google.com" target="_blank">
+                <img src="./assets/google.png" alt="Google.com"></a>
+              <a class="command__content__social__link" href="https://www.twitter.com" target="_blank">
+                <img src="./assets/twitter.png" alt="Twitter.com"></a>
+              <a class="command__content__social__link" href="https://www.linkedIn.com" target="_blank">
+                <img src="./assets/linkedIn.png" alt="LinkedIn.com"></a>
+            </div>
+          </div>
+          <div class="command__content">
+            <img class="command__content__image" src="assets/desmond.png" alt="Desmond Miles">
+            <div class="command__content__text">
+              <h4>Desmond Miles</h4>
+              <p>Curabitur vestibulum eget mauris quis laoreet. Phasellus in quam laoreet, viverra lacus ut,
+                ultrices velit.
+              </p>
+            </div>
+            <div class="command__content__social">
+              <a class="command__content__social__link" href="https://www.facebook.com" target="_blank">
+                <img src="./assets/facebook.png" alt="Facebook.com"></a>
+              <a class="command__content__social__link" href="https://www.google.com" target="_blank">
+                <img src="./assets/google.png" alt="Google.com"></a>
+              <a class="command__content__social__link" href="https://www.twitter.com" target="_blank">
+                <img src="./assets/twitter.png" alt="Twitter.com"></a>
+              <a class="command__content__social__link" href="https://www.linkedIn.com" target="_blank">
+                <img src="./assets/linkedIn.png" alt="LinkedIn.com"></a>
+            </div>
+          </div>
+          <div class="command__content">
+            <img class="command__content__image" src="assets/scolara.png" alt="Scolara Visari">
+            <div class="command__content__text">
+              <h4 class="special">Scolara Visari</h4>
+              <p>Nulla sed nunc et tortor luctus faucibus. Morbi at aliquet turpis, et consequat felis. Quisque
+                condimentum.</p>
+            </div>
+            <div class="command__content__social">
+              <a class="command__content__social__link" href="https://www.facebook.com" target="_blank">
+                <img src="./assets/facebook.png" alt="Facebook.com"></a>
+              <a class="command__content__social__link" href="https://www.google.com" target="_blank">
+                <img src="./assets/google.png" alt="Google.com"></a>
+              <a class="command__content__social__link" href="https://www.twitter.com" target="_blank">
+                <img src="./assets/twitter.png" alt="Twitter.com"></a>
+              <a class="command__content__social__link" href="https://www.linkedIn.com" target="_blank">
+                <img src="./assets/linkedIn.png" alt="LinkedIn.com"></a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="get-a-quote">
+      <div class="get-a-quote__wrapper">
+        <p class="get-a-quote__header-text">Get a Quote</p>
+        <p class="get-a-quote__text">Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum. Duis mollis,
+          non
+          commodo luctus, nisi erat porttitor <wbr><span> ligula, eget lacinia odio sem nec elit. Fusce dapibus, tellus
+            ac
+            cursus commodo,
+            tortor mauris condimentum nibh.</span></p>
+        <div class="get-a-quote__container">
+          <div class="form__container">
+            <form class="form" action="#">
+              <fieldset class="form__fieldset">
+                <input class="input-name" type="text" placeholder="Name" required>
+                <input class="input-email" type="email" placeholder="Email" required>
+                <input class="input-text" type="text" placeholder="Subject">
+                <textarea name placeholder="Describe your project in detail..."></textarea>
+              </fieldset>
+              <button class="button-submit" type="submit">SEND</button>
+            </form>
+          </div>
+          <div class="form-text-container">
+            <div>
+              <p class="contact-information">Contact Information</p>
+              <p class="contact-information__text">
+                Quisque hendrerit purus dapibus, ornare nibh vitae, viver&shy;ra nibh. Fusce vitae aliquam tellus. Proin
+                sit
+                amet volutpat <wbr> libero. Nulla sed nunc et tortor luctus faucibus. Morbi at <wbr>aliquet turpis, et consequat
+              felis.
+            </p>
+            </div>
+            <div class="contacts">
+              <div class="icons">
+                <span><img src="./assets/iconlocation.png" alt="location"></span>
+                <span><img src="./assets/iconphone.png" alt="phone"></span>
+                <span><img src="./assets/iconmail.png" alt="mail"></span>
+              </div>
+              <div class="contacts-info">
+                <a class="adress" href="https://goo.gl/maps/5ywKoijqghG2" target="_blank">Elm St. 14/05 Lost City</a>
+                <a class="phone" href="callto:+35283318635 ">03528 331 86 35 </a>
+                <a class="mail" href="mailto:info@singolo.com">info@singolo.com</a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="footer__container">
+        <p class="copyright-text">© Copyright 2013</p>
+        <div class="command__content__social">
+          <a class="command__content__social__link" href="https://www.facebook.com" target="_blank">
+            <img src="./assets/facebook.png" alt="Facebook.com"></a>
+          <a class="command__content__social__link" href="https://www.google.com" target="_blank">
+            <img src="./assets/google.png" alt="Google.com"></a>
+          <a class="command__content__social__link" href="https://www.twitter.com" target="_blank">
+            <img src="./assets/twitter.png" alt="Twitter.com"></a>
+          <a class="command__content__social__link" href="https://www.linkedIn.com" target="_blank">
+            <img src="./assets/linkedIn.png" alt="LinkedIn.com"></a>
+        </div>
+      </div>
+    </footer>
+  </main>
+
 </body>
+
 </html>
